--- a/app/src/main/res/layout/activity_detail_todo_list.xml
+++ b/app/src/main/res/layout/activity_detail_todo_list.xml
@@ -7,6 +7,21 @@
     android:background="@color/background_primary"
     tools:context=".activities.DetailTodoListActivity">
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/button_go_to_create_todo"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="40dp"
+        android:background="@color/primary"
+        android:clickable="true"
+        app:backgroundTint="@color/primary"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.915"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@android:drawable/ic_input_add"
+        app:tint="@color/background_secondary" />
+
     <LinearLayout
         android:id="@+id/linearLayout"
         android:layout_width="match_parent"
