--- a/app/src/main/res/layout/list_card.xml
+++ b/app/src/main/res/layout/list_card.xml
@@ -3,7 +3,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="20dp"
+    android:layout_marginLeft="20dp"
+    android:layout_marginRight="20dp"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
     app:cardCornerRadius="4dp"
     app:cardElevation="4dp"
     app:cardBackgroundColor="@color/background_secondary">
