--- a/app/src/main/res/layout/todo_card.xml
+++ b/app/src/main/res/layout/todo_card.xml
@@ -18,7 +18,7 @@
         android:padding="16dp">
 
         <CheckBox
-            android:id="@+id/checkBox"
+            android:id="@+id/todo_check_box"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:buttonTint="@color/primary" />
