--- a/app/src/main/res/layout/todo_card.xml
+++ b/app/src/main/res/layout/todo_card.xml
@@ -13,25 +13,44 @@
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:padding="16dp">
-
-        <CheckBox
-            android:id="@+id/todo_check_box"
-            android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:orientation="vertical">
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:buttonTint="@color/primary" />
+            android:orientation="horizontal">
+            <CheckBox
+                android:id="@+id/todo_check_box"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:buttonTint="@color/primary" />
 
-        <TextView
-            android:id="@+id/card_todo_title"
-            android:layout_width="0dp"
-            android:layout_weight="1"
+            <TextView
+                android:id="@+id/card_todo_title"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@color/primary"
+                android:fontFamily="sans-serif-medium"
+                android:text="Nome do Item" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textSize="18sp"
-            android:textColor="@color/primary"
-            android:fontFamily="sans-serif-medium"
-            android:text="Nome do Item" />
+            android:orientation="horizontal">
 
+            <TextView
+                android:id="@+id/card_todo_description"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:textSize="18sp"
+                android:textColor="@color/primary"
+                android:fontFamily="sans-serif-medium"
+                android:text="Descricao do Item" />
+        </LinearLayout>
     </LinearLayout>
+
 </androidx.cardview.widget.CardView>
